php/lumen/0.1.4/_sources/changelog.txt
.. _changelog:

Change Log
==========

All library changes, in descending order. something

Version 0.1.4
-------------

** Released June 13, 2016 **

- Flatten accountStores in register/login form (Fixes #2)
- Only set provider array on account store if set
- Remove reference to IdSite in yaml config file (Fixes #1)

Version 0.1.3
-------------

** Released May 18, 2016 **

- Added the ability to validate Bearer token with 'stormpath.auth' locally
- Automatically adding stormpath.auth and stormpath.guest middleware

Version 0.1.2
-------------

** Released May 4, 2016 **

- Star Wars Day!
- Documentation build and auto deploy
- Update Routes File

Version 0.1.1
-------------

** Released April 16, 2016 **

- Fixes bug in registration autoLogin option
- Throws Exception if AutoLogin is enabled along with email verification workflow
- Enable /me endpoint by default

Version 0.1.0
-------------

**Released on April 15, 2016.**

- Initial Release

